<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_detail_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/medium_separation"
    android:paddingRight="@dimen/medium_separation">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_separation"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fragment_detail_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_separation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_separation"
        android:text="@string/full_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fragment_detail_fullname_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_separation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_separation"
        android:text="@string/description"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fragment_detail_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_separation" />

    <LinearLayout
        android:id="@+id/fragment_detail_second_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_separation"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_detail_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_separation"
            android:text="@string/owner_username"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_detail_owner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_separation" />
    </LinearLayout>


</LinearLayout>
